<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools" xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/add_alert">
    <FrameLayout android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 tools:context=".add_alert">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:minHeight="32dp" android:minWidth="32dp"
                android:background="@color/pallet_3">
            <TextView
                    android:text="@string/alert"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" tools:text="Alert"
                    android:visibility="visible" android:gravity="center_horizontal|center_vertical"
                    android:fontFamily="@font/roboto_mono_thin" android:textSize="30sp"
                    style="@android:style/Widget.ListView.White" android:textColor="@color/pallet_6"
                    android:background="@color/pallet_2"/>
            <TextView
                    android:text="@string/chose_exchange"
                    android:layout_width="0dp"
                    android:layout_height="37dp" android:id="@+id/textView3"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:text="Chose exchange"
                    app:layout_constraintTop_toBottomOf="@+id/textView"
                    android:gravity="center_horizontal|center_vertical" android:textSize="24sp"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerExchange" app:layout_constraintEnd_toEndOf="parent"
                    android:textAlignment="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:minHeight="50dp"
                    android:background="@color/pallet_4" android:popupBackground="@color/pallet_5"
                    android:visibility="visible" android:gravity="center_horizontal|center_vertical"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintVertical_bias="0.0"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerCoin"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerExchange"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/spinnerFiat"
                    android:minHeight="50dp" android:background="@color/pallet_6"
                    android:popupBackground="@color/pallet_5"
                    app:layout_constraintHorizontal_chainStyle="spread_inside"/>
            <Spinner
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/spinnerFiat" app:layout_constraintStart_toEndOf="@+id/spinnerCoin"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerExchange" app:layout_constraintEnd_toEndOf="parent"
                    android:minHeight="50dp" android:background="@color/pallet_5"
                    android:popupBackground="@color/pallet_6"/>
            <RadioGroup android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginBottom="16dp"
                        app:layout_constraintBottom_toTopOf="@+id/button" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" tools:layout_editor_absoluteX="0dp"
                        app:layout_constraintVertical_bias="0.100000024"
                        android:gravity="center_horizontal|center_vertical" android:id="@+id/radioGroup">
                <RadioButton android:id="@+id/radio_more"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/more_than"/>
                <RadioButton android:id="@+id/radio_less"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:text="@string/less_than"/>
            </RadioGroup>
            <Button
                    android:text="@string/add_alert"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerExchange"
                    android:gravity="center_horizontal|center_vertical" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="24dp"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/button4"
                    app:layout_constraintVertical_bias="1.0" android:textColorLink="@color/pallet_3"
                    android:background="@drawable/rounded_button" android:layout_marginBottom="16dp"/>
            <Button
                    android:text="@string/dismiss_alert"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button4"
                    android:gravity="center_horizontal|center_vertical"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerExchange"
                    app:layout_constraintBottom_toBottomOf="parent" android:layout_marginEnd="24dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/button"
                    app:layout_constraintHorizontal_bias="0.5" app:layout_constraintVertical_bias="1.0"
                    android:textColorLink="@color/pallet_7" android:background="@drawable/rounded_button_light"
                    android:layout_marginBottom="16dp"/>
            <TextView
                    android:text="Alert me when..."
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/spinnerCoin"
                    tools:text="Alert me when x is option than threshold" android:fontFamily="@font/roboto_mono_thin"
                    android:textSize="18sp" android:textColor="@color/pallet_2" android:textStyle="bold"
                    android:layout_marginBottom="16dp" app:layout_constraintBottom_toTopOf="@+id/button"
                    android:gravity="center_horizontal|center_vertical" app:layout_constraintVertical_bias="0.044"
                    tools:ignore="HardcodedText"/>
            <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:inputType="numberDecimal"
                    android:ems="10"
                    android:id="@+id/editText2" android:layout_marginBottom="16dp"
                    app:layout_constraintBottom_toTopOf="@+id/button" android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/radioGroup" android:layout_marginStart="16dp"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toEndOf="parent" app:layout_constraintVertical_bias="0.100000024"/>
        </android.support.constraint.ConstraintLayout>
    </FrameLayout>
</layout>